test-cases/valid/reject/subtract_mismatched_operand_types.ul
void main() {
    println '1' - 1; // LHS and RHS types must match.
}
